feat(politeconomia): 25_chapter done

--- a/ostrovityanov-politeconomia/EPUB/Styles/style.css
+++ b/ostrovityanov-politeconomia/EPUB/Styles/style.css
@@ -11,6 +11,10 @@ div.para {
     text-indent: 2em
 }
 
+div.conc {
+    font-style: italic;
+}
+
 div.subt {
     background-color: #F4F4F4;
     font-size: 1em;
